code/styles.css
* {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    overflow-x: hidden;
}

h1 { font-size: 2rem; }
h2 { font-size: 1.75rem; }
h3 { font-size: 1.5rem; }
h4 { font-size: 1.25rem; }
h5 { font-size: 1.125rem; }
h6 { font-size: 1rem; }

h1, h2, h3, h4, h5, h6 {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
}

p, li {
    font-family: 'Open Sans', sans-serif;
}

section {
    height: 100vh;
    overflow-y: hidden;
}

body {
    background-color: #202020;

}

header {
    position: fixed;
    top: 0;
    width: 100%;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 1% 3% 1%  3%;
}
nav #ham-menu {
    display: none;
}
#nav-bar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}

#nav-bar li {
    list-style: none;
    list-style-type: none;
}

nav > #logo {
    color: #6578f3;
    font-size: 1.5rem;
    text-decoration: none;
    cursor: pointer;
}

#nav-bar li > a {
    text-decoration: none;
    font-size: 1.5rem;
    color: #EEEEEE;
} 

#nav-bar li > a:hover {
    color: #6578f3;
}

#home {
    background-image: url(../assets/images/background.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    height: 100vh;
}

#home .intro {
    position: relative;
    top: 60%;
    left: 3%;
}

#home .intro h4 {
    color:  #6578f3;
    font-size: 1.9rem;
    letter-spacing: 3px;
}

#home .intro h4 > span {
    color:  #EEEEEE;
    text-transform: capitalize;
}

#home .intro h2 {
    color: #EEEEEE;
    font-size: 4rem;
}

#home .intro button, #about .content > .cta-about {
    margin-top: 25px;
    border: none;
    padding: 5px;
    border-radius: 15px;
    height: 45px;
    width: 200px;
    background-color: #6578f3;
    color: #EEEEEE;
    font-size: 1.2rem;
    font-weight: 800;
}

#home .intro .right {
    margin-left: 15px;
}
#about {
    display: grid;
    height: 100vh;
}
#about > .main {
    display: grid;
    place-self: center ;
    grid-template-columns: 2fr 3fr;
    column-gap: 1.5rem;
    width: 80%;
    height: 60vh;
}

#about > .main .photo {
    background-image: url(../assets/images/about.jpg);
    background-position: top;
    background-repeat: no-repeat;
    background-size: 75% auto;
    border-radius: 10px;
}


#about > .main .content h2 {
    
    color: #6578f3;
    letter-spacing: 2px;
}

#about > .main .content p {

    color: #EEEEEE;
    line-height: 1.5;
    margin-top: 10px;
    text-align: justify;
}

#about > .main .content table{
    border-collapse: collapse;
    margin-bottom: 20px;
}

#about > .main .content .left-info {
    width: 65%;
    color: #6578f3;
}

#about > .main .content .plus-info {
    color: #EEEEEE;
    width: 100%;
    height: 6rem;
    margin-top: 30px;
}



#about > .main .content .plus-info tr {
    padding: 3px;
}

#about > .main .content .cta-about {
    position: relative;
    top: 11.5%;
}


.skills-title {
    margin-top: 20px;
    color: #6578f3;
    letter-spacing: 1px;
}

.skills-list {
    margin-top: 18px;
    width: 84%;
}


#about > .main .content .skills-list > ul {
    margin-top: 7px;
    display: flex;
    justify-content: space-between;
    color: #EEEEEE;
    list-style: none;
    list-style-type: none;
}

#about > .main .content .skills-list > ul li {
    line-height: 1.2;
}

.skills-list >.second {
    margin-bottom: 20px;
}

#about > .main .content .skills-list > ul i {
    color: #6578f3;
}


.image {
    display: none;
}


/* Services section*/


#services > .services-intro, #portfolio > .portfolio-intro {
    position: relative;
    top: 15%;
    color: #6578f3;
    text-align: center;
}

#services > .services-intro h2, #portfolio > .portfolio-intro h2 {
    line-height: 1.5;
    letter-spacing: 2px;
}

#services > .services-intro h3, #portfolio > .portfolio-intro h3 {
    letter-spacing: 2px;
    color: #EEEEEE;
}

.services-div, .portfolio-div {

    position: relative;
    top: 20%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.services-card, .portfolio-card {
    display: grid;
    grid-template-rows: 3fr 3fr;
    grid-template-columns:2fr 2fr 2fr ;
    width: 80%;
    height: 50vh;
    gap: 30px;
    row-gap: 40px;
}

.services-card > .service, .portfolio-card > .portfolio{
    background-color: #383535;
    border-radius: 15px;
    border-bottom: 3px solid #6578f3;
    padding: 15px;
}


.services-card .service {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.services-card h3 {
    color: #6578f3;
    font-size: 1.5rem;
}

.services-card i {
    font-size: 3.2rem;
    color: #6578f3;
    padding-bottom: 10px;
}

.services-card p {

    margin-top: 10px;
    color: #EEEEEE;
    text-align: center;
}


.portfolio > .c-logo {
    height: fit-content;
    width: 5rem;
    margin-bottom: 2px;
    display: flex;
    align-items: center;
}

.portfolio > .c-logo i {
    font-size: 3.5rem;
    color: #b5b6be;
}


.portfolio h4 {
    margin-top: 3px;
    color: #6578f3;
}

.portfolio > h6 {
    color: antiquewhite;
    color: #b9a9a9;
}

.portfolio .par-button {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.portfolio p {
    width: 85%;
    text-align: justify;
    color: #EEEEEE;
}

.portfolio .to-project {
    align-self: flex-end;

}

.portfolio button {
    background-color: transparent;
    height: fit-content;
    width: fit-content;
    box-shadow: none;
    border: none;
    cursor: pointer;

}

.portfolio button i {

    color: #0724e4;
    font-size: 2rem;
}

@media only screen and (max-width: 575px) {
    html{
        font-size: 1rem;
    }


    h1 { font-size: 2rem; }
    h2 { font-size: 1.75rem; }
    h3 { font-size: 1.5rem; }
    h4 { font-size: 1.25rem; }
    h5 { font-size: 1.125rem; }
    h6 { font-size: 1rem; }


    #home {
        background-image: url(/assets/images/about.jpg);
        background-position: top;
        background-repeat: no-repeat;
        height: 100vh;
    }

    #home .intro {
        position: relative;
        top: 75%;
        height: auto;
        left: 3%;
    }

    #home .intro h4 {
        color:  #6578f3;
        font-size: 1.25rem;
        line-height: normal;
        letter-spacing: 1.4px;
    }

    #home .intro h2 {
        color: #EEEEEE;
        font-size: 1.75rem;
        margin: 2px 0px 2px 0px ;
    }

    #home .intro > button, #about .main > .content .cta-about{

        height: 2rem;
        width: 7rem;
        font-size: 1rem;
        border-radius: 5px;
        margin-top: 2%;
        padding: 2px;
    }

    #home .intro > .right {
        margin-left: 2%;
    }

   nav #ham-menu {
        display: block;
        color: #EEEEEE;
        position: fixed;
        right: 7%;
    }

    nav > .colored {
    position: absolute;
    top: 35.47px;
    left: 0;
    background-color: rgba(0, 0, 0, 0.8);
    width: 100vw;
    height: 100vh;
    transform: translateX(-100%); /* Moves the nav off-screen */
    transition: transform 0.3s ease;
}
    nav  #nav-bar {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    justify-content: space-around;
    gap: 30px; /* Adjust this value to control the gap between items */
    }


    nav ul  li {
        margin: 0;
        padding: 0;
    }

    header {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        z-index: 1000;
        transition: top 0.5s ease-in-out; 
    }


    /* About Section Adjustments */
    #about .main {
        display: block;
        position: relative;
        top: 10%;
        left: 3%;
        width: 100vw;
        height: 100vh;
        padding: 0;
        margin: 0;
    }

    /* Hide the photo grid */
    #about .main .photo {
        display: none;
    }

    /* Ensure the content is displayed properly */
    #about .main > .content {
        width: 100%;
        margin-left: 0;
        height: 100%;
    }

    #about > .main .content > .about-desk{
        display: none;
    }
    #about .main > .content h2 {

        margin-top: 5px;
        font-size: 1.75rem;
    }


    #about .main > .content .image{

        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        justify-content: space-between;

        width: 90%;
    }
     #about .main > .content img {

        height: 200px;
        border-radius: 30%;
     }



    #about .main > .content > p {
        line-height: normal;
        width: 90%;
        letter-spacing: .3px;
    }

    #about .main > .content .skills-list {
        display: flex;
        flex-direction: column;
        margin-top: 8px;
    }

    #about .main > .content .skills-list ul {
        flex-direction: column;
        margin-top: 0;  
    }



    #about .main > .content .skills-list ul > li {
        font-size: 1rem;
        margin-top: 10px;
        margin-bottom: 0;
    }

    #about .main > .content .skills-list .shorten {
        display: none;
    }


    #about .main > .content .cta-about {
        position: relative;
        top: 3.5%;
    }

    /* Hide the table in the about section */
    #about .main > .content table {
        display: none;
    }

}

